Fix problem with text wrapping in labels

--- a/src/style.scss
+++ b/src/style.scss
@@ -2,7 +2,8 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  height: 100vh;
+  height: 200vh;
+  width: 200vw;
   justify-content: center;
   align-items: center;
   font-family: 'Arial', sans-serif;
@@ -103,6 +104,7 @@ body {
     padding: 3px 5px;
     border-radius: 5px;
     bottom: 20px;
+    white-space: nowrap;
     &_left {
       transform: translateX(-50%);
     }
